added phone and email to index.html

--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
         <h2>Contact</h2>
         <div class="contact-icon">
           <i class="fa fa-phone" aria-hidden="true"></i>
-          <p>07874424872</p>
+          <p>07951826444</p>
         </div>
         <div class="contact-icon">
           <i class="fa fa-envelope" aria-hidden="true"></i>
-          <p>squasher@hotmail.com</p>
+          <p>theladysquasher@gmail.com</p>
         </div>
       </section>
     </main>
     <footer>
-      <small>&copy; Copyright 2023, Squashing</small>
+      <small>&copy; Copyright 2023, The Lady Squasher</small>
     </footer>
   </body>
 </html>
